[gd_scene load_steps=45 format=2]

[ext_resource path="res://assets/Characters/Enemies/Bosses/WaterSpirit.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemies/Boss/WaterSpirit.gd" type="Script" id=2]
[ext_resource path="res://sfx/giant2.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 44 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 40 ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack"
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.16, 0.28, 0.4, 0.48, 0.56, 0.68, 0.88 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.44, 0.64 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_cm_init_attack"
}, {
"args": [  ],
"method": "_cm_end_attack"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "charge"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "dead"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28 ]
}

[sub_resource type="Animation" id=44]
resource_name = "dive"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 24, 25 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_cm_finish_dive"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42 ]
}

[sub_resource type="Animation" id=7]
resource_name = "ice"
length = 1.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.4, 0.6, 0.7, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=35]
resource_name = "jump"
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.88 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_cm_finish_jump"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "charge"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "dive"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "ice"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "jump"

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=41]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachine" id=2]
states/attack/node = SubResource( 13 )
states/attack/position = Vector2( 264, 199 )
states/charge/node = SubResource( 30 )
states/charge/position = Vector2( 664, 129.327 )
states/dead/node = SubResource( 14 )
states/dead/position = Vector2( 712, 342 )
states/dive/node = SubResource( 45 )
states/dive/position = Vector2( 281, 297.333 )
states/hurt/node = SubResource( 16 )
states/hurt/position = Vector2( 556, 342 )
states/ice/node = SubResource( 38 )
states/ice/position = Vector2( 421, 143.73 )
states/idle/node = SubResource( 17 )
states/idle/position = Vector2( 645.667, 216.333 )
states/jump/node = SubResource( 36 )
states/jump/position = Vector2( 865, 141.327 )
transitions = [ "idle", "attack", SubResource( 21 ), "attack", "idle", SubResource( 22 ), "idle", "hurt", SubResource( 25 ), "attack", "hurt", SubResource( 26 ), "hurt", "idle", SubResource( 28 ), "hurt", "dead", SubResource( 29 ), "idle", "charge", SubResource( 31 ), "charge", "idle", SubResource( 32 ), "charge", "jump", SubResource( 37 ), "idle", "ice", SubResource( 39 ), "ice", "idle", SubResource( 40 ), "ice", "charge", SubResource( 41 ), "ice", "hurt", SubResource( 42 ), "jump", "idle", SubResource( 43 ), "idle", "dive", SubResource( 46 ), "dive", "idle", SubResource( 47 ), "attack", "dive", SubResource( 48 ), "hurt", "dive", SubResource( 49 ) ]
start_node = "idle"
end_node = "dead"
graph_offset = Vector2( 0, 139.514 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=3]

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 36, 40 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 48, 45.9048 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 84, 46 )

[node name="WaterSpirit" type="KinematicBody2D" groups=["Enemies"]]
collision_layer = 2
collision_mask = 528
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8, 8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -8, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 8
vframes = 6
frame = 40

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/attack = SubResource( 5 )
anims/charge = SubResource( 10 )
anims/dead = SubResource( 6 )
anims/dive = SubResource( 44 )
anims/hurt = SubResource( 8 )
anims/ice = SubResource( 7 )
anims/idle = SubResource( 9 )
anims/jump = SubResource( 35 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 2 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 3 )

[node name="ChargeArea" type="Area2D" parent="." groups=["Enemies"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChargeArea"]
position = Vector2( -4, 8 )
shape = SubResource( 33 )

[node name="DeadArea" type="Area2D" parent="." groups=["EnemiesDefense"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadArea"]
position = Vector2( -4, 8 )
shape = SubResource( 11 )

[node name="AttackArea" type="Area2D" parent="." groups=["Enemies"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 40, 8 )
shape = SubResource( 12 )
disabled = true

[node name="SwordHurt01" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="SwordHurt02" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -13.434

[node name="RayAttack" type="RayCast2D" parent="."]
position = Vector2( 0, 24 )
enabled = true
cast_to = Vector2( 88, 0 )

[node name="RayFlip" type="RayCast2D" parent="."]
position = Vector2( 0, 32 )
cast_to = Vector2( 80, 0 )
collision_mask = 528

[node name="RayWaterShot" type="RayCast2D" parent="."]
position = Vector2( 128, 0 )
enabled = true
cast_to = Vector2( 408, 0 )

[node name="RayDive" type="RayCast2D" parent="."]
position = Vector2( -24, 40 )
cast_to = Vector2( -32, 0 )

[connection signal="area_entered" from="DeadArea" to="." method="_on_DeadArea_area_entered"]
